5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4060/executions/1760_1189.log
== TEST (2019-05-29 15:39:32) 
-- CODE:
palavra=input("")
print(palavra)
-- OUTPUT:
ACARARAJADADAJARARACA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:39:59) 
-- CODE:
palavra=input("")
print(replace(palavra))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(replace(palavra))
NameError: name 'replace' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:40:57) 
-- CODE:
palavra=input("")
print(palavra.replace('a','o'))
-- OUTPUT:
ACARARAJADADAJARARACA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:41:21) 
-- CODE:
palavra=input("")
print(palavra.replace(' ',+))
-- ERROR:
File "XXXX", line 2
    print(palavra.replace(' ',+))
                               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:41:51) 
-- CODE:
palavra=input("")
print(palavra.replace(' ','+'))
-- OUTPUT:
ACARARAJADADAJARARACA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
